chore(*): try to use "material-ui": "^1.0.0-beta.31"

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash": "^4.16.6",
+    "moment": "^2.20.1",
     "objectpath": "^1.2.1",
     "tv4": "^1.2.7"
   },
@@ -45,7 +46,9 @@
     "jest-cli": "^16.0.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "material-ui": "^0.18.7",
+    "material-ui": "^1.0.0-beta.31",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui-pickers": "^1.0.0-beta.13.1",
     "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-tap-event-plugin": "^2.0.0",
@@ -54,7 +57,7 @@
     "webpack": "^2.7.0"
   },
   "peerDependencies": {
-    "material-ui": "^0.18.7",
+    "material-ui": "1.0.0-beta.25",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
