--- a/example/package.json
+++ b/example/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "lodash": "^4.16.6",
-    "material-ui": "^0.18.7",
+    "material-ui": "1.0.0-beta.25",
     "react": "^15.3.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.5.2",
