--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-schema-form",
-  "version": "0.3.11",
+  "name": "react-schema-json-form",
+  "version": "0.0.1",
   "description": "React json schema form",
   "keywords": [
     "json schema",
@@ -9,7 +9,7 @@
     "react-component",
     "form"
   ],
-  "author": "Steve Hu, Nicholas Azar",
+  "author": "zhhu_123@163.com",
   "license": "MIT",
   "main": "./lib/index",
   "files": [
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/networknt/react-schema-form.git"
+    "url": "https://github.com/zhanghuan1203/react-schema-json-form.git"
   },
   "dependencies": {
     "classnames": "^2.2.5",
